<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/phone_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tv_to_identify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:lineSpacingMultiplier="1.28"
        android:text="@string/enter_phone_txt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_to_identify">

        <TextView
            android:id="@+id/phone_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:lineSpacingMultiplier="1.28"
            android:text="@string/phone_code"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/flag_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.28"
            android:paddingBottom="15dp"
            android:text="@string/emoji_flag"
            android:textColor="@color/black"
            android:textSize="25sp"/>


        <EditText
            android:id="@+id/et_login_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/code_hint"
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:lineSpacingMultiplier="1.28"
            android:maxLines="1"
            android:padding="6dp"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="25sp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/next_btn"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:shadowDy="0"
        android:text="@string/next_btn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1"/>

</android.support.constraint.ConstraintLayout>